@startuml shared-network-responses
title Shared — Network Responses (org.adsl.shared.network.responses)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
hide empty members

package "shared.network.responses" {

  interface ResponseVisitor {
    +visit(response: ServerPing): void
    +visit(response: LoginNeeded): void
    +visit(response: HomeUpdate): void
    +visit(response: LobbyUpdate): void
    +visit(response: TotemAvailableUpdate): void
    +visit(response: GameUpdate): void
    +visit(response: GameEnded): void
    +visit(response: ErrorResponse): void
    +visit(response: ServerDisconnected): void
    +visit(response: EventsTriggered): void
  }

  abstract class ServerResponse <<@JsonTypeInfo, Serializable>> {
    -message: String
    #ServerResponse()
    #ServerResponse(message: String)
    +getMessage(): String
    +setMessage(message: String): void
    +isHeartbeat(): boolean
    {abstract} +accept(visitor: ResponseVisitor): void
  }
  note right of ServerResponse
    Jackson polymorphic JSON with
    discriminator property "type".
    @JsonSubTypes registers every concrete
    subtype (LOGIN_NEEDED, HOME_UPDATE,
    LOBBY_UPDATE, TOTEM_AVAILABLE_UPDATE,
    GAME_UPDATE, PING, DISCONNECTED,
    GAME_ENDED, ERROR_RESPONSE,
    EVENTS_TRIGGERED).
    isHeartbeat()=true → bypass dispatch pacer.
  end note

  class ServerPing {
    +accept(visitor: ResponseVisitor): void
    +isHeartbeat(): boolean
  }

  class ServerDisconnected {
    +accept(visitor: ResponseVisitor): void
  }

  class LoginNeeded {
    +accept(visitor: ResponseVisitor): void
  }

  class HomeUpdate {
    -activeGames: List<Integer>
    -gamePlayers: Map<Integer, List<String>>
    -gameCapacity: Map<Integer, Integer>
    +HomeUpdate(activeGames: List<Integer>, gamePlayers: Map, gameCapacity: Map)
    +HomeUpdate(activeGames: List<Integer>)
    +getActiveGames(): List<Integer>
    +getGamePlayers(): Map<Integer, List<String>>
    +getGameCapacity(): Map<Integer, Integer>
    +accept(visitor: ResponseVisitor): void
  }

  class LobbyUpdate {
    -gameId: int
    -players: List<String>
    -numPlayerAllowed: int
    +LobbyUpdate(gameId: int, players: List<String>, numPlayerAllowed: int)
    +getGameId(): int
    +getPlayers(): List<String>
    +getNumPlayerAllowed(): int
    +accept(visitor: ResponseVisitor): void
  }

  class TotemAvailableUpdate {
    -totemAvailable: List<Totem>
    +TotemAvailableUpdate(totems: List<Totem>)
    +getTotemAvailable(): List<Totem>
    +accept(visitor: ResponseVisitor): void
  }

  class GameUpdate {
    -game: GameDTO
    +GameUpdate(game: GameDTO)
    +getGame(): GameDTO
    +accept(visitor: ResponseVisitor): void
  }

  class GameEnded {
    -records: List<DBRecord>
    -results: List<MatchResult>
    +GameEnded(records: List<DBRecord>, results: List<MatchResult>)
    +getRecords(): List<DBRecord>
    +getResults(): List<MatchResult>
    +accept(visitor: ResponseVisitor): void
  }

  class ErrorResponse {
    +ErrorResponse(message: String)
    +accept(visitor: ResponseVisitor): void
  }

  class EventsTriggered {
    -eventTitle: String
    -logMessage: String
    +EventsTriggered(eventTitle: String, logMessage: String)
    +getEventTitle(): String
    +getLogMessage(): String
    +accept(visitor: ResponseVisitor): void
  }
}

ServerPing -up-|> ServerResponse
ServerDisconnected -up-|> ServerResponse
LoginNeeded -up-|> ServerResponse
HomeUpdate -up-|> ServerResponse
LobbyUpdate -up-|> ServerResponse
TotemAvailableUpdate -up-|> ServerResponse
GameUpdate -up-|> ServerResponse
GameEnded -up-|> ServerResponse
ErrorResponse -up-|> ServerResponse
EventsTriggered -up-|> ServerResponse

ServerResponse ..> ResponseVisitor : dispatches via accept

GameUpdate ..> "shared.model.GameDTO"
TotemAvailableUpdate ..> "shared.enums.Totem"
GameEnded ..> "shared.model.DBRecord"
GameEnded ..> "shared.model.MatchResult"

@enduml
